name:               radian
version:            0.0.6
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2014 NICTA Limited
                    Copyright (C) 2018 Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Isomorphisms for measurements that use radians.
category:           Development
description:       
  <<http://i.imgur.com/Ns5hntl.jpg>>
  .
  Isomorphisms for measurements that use radians.
homepage:           https://github.com/qfpl/radian
bug-reports:        https://github.com/qfpl/radian/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:qfpl/radian.git

library
  default-language:
                    Haskell2010

  build-depends:
                      base >= 3 && < 5
                    , profunctors >= 3.1.1 && < 5.3

  ghc-options:
                    -Wall

  default-extensions:
                      NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Radian

test-suite hunit
  type:
                    exitcode-stdio-1.0

  main-is:
                    hunit_tests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base >= 3 && < 5
                    , lens >= 4 && < 4.17
                    , HUnit >= 1.2 && < 1.7
                    , radian

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
